--- a/shelter/pages/main/main.scss
+++ b/shelter/pages/main/main.scss
@@ -380,6 +380,7 @@ $color-dark-3xl:#292929;
 						background-color: $color-light-s;
 						border-radius: 0.9rem;
 						padding-bottom: 3rem;
+						overflow: hidden;
 		
 						&__name {
 							font-family: Georgia;
@@ -673,7 +674,8 @@ $color-dark-3xl:#292929;
 		background-color: $color-light-s;
 		margin-left: auto;
 		margin-right: auto;
-		border-radius: 10px;
+		border-radius: 9px;
+		
 
 		.btn-close {
 			position: absolute;
@@ -697,11 +699,12 @@ $color-dark-3xl:#292929;
 		.modal-card {
 			display: flex;
 			// height: 500px;
+			
 
 			.modal-image {
 				width: 500px;
 				height: 500px;
-				border-radius: 10px;
+				border-radius: 9px 0 0 9px;
 				overflow: hidden;
 				
 				img {
@@ -1027,58 +1030,24 @@ $color-dark-3xl:#292929;
 	}
 
   .modal {
-		// left: 0;
-		// top: 0;
-		// position: fixed;
-		// z-index: 1000;
-		// background-color: rgba(41, 41, 41, 0.6);
-		// width: 100%;
-		// height: 100%;
-		// overflow: hidden;
 	
 		.modal-content {
-			// top: 50%;
-			// transform: translateY(-50%);
+			
 			width: 630px;
-			// min-height: 350px;
-			// position: relative;
-			// background-color: $color-light-s;
-			// margin-left: auto;
-			// margin-right: auto;
-			border-radius: 8px;
+		
+			border-radius: 9px;
 	
-			// .btn-close {
-			// 	position: absolute;
-			// 	top: -52px;
-			// 	right: -52px;
-			// 	width: 52px;
-			// 	height: 52px;
-			// 	border: 2px solid $color-primary;
-			// 	border-radius: 100%;
-			// 	background: none;
-			// 	outline: none;
-				
-			// }
-	
-			// .btn-close:hover {
-			// 	cursor: pointer;
-			// 	background-color: $color-primary-light;
-			// 	border-color: $color-primary-light;
-			// }
+		
 	
 			.modal-card {
 				display: flex;
-				// height: 350px;
+			
 	
 				.modal-image {
 					width: 350px;
 					height: 350px;
-					border-radius: 8px;
-					// overflow: hidden;
 					
-					// img {
-					// 	width: 100%;
-					// }
+				
 				}
 		
 		
@@ -1087,51 +1056,34 @@ $color-dark-3xl:#292929;
 					
 					padding-top: 10px;
 					padding-bottom: 10px;
-					// font-family: Georgia;
+				
 					width: 262px;
 		
-					// .modal-name {
-					// 	font-size: 35px;
-					// 	line-height: 130%;
-					// }
-		
-					// .modal-type {
-					// 	font-size: 20px;
-					// 	line-height: 115%;
-					// 	margin-top: 10px;
-					// }
 		
 					.modal-description {
 						font-size: 13px;
 						line-height: 110%;
 						margin-top: 20px;
 						letter-spacing: 0.8px;
-					// 	font-weight: 300;
+					
 					}
 		
 					.modal-list {
-					// 	font-size: 15px;
-					// 	line-height: 110%;
+				
 						margin-top: 20px;
-					// 	list-style-position: inside;
+					
 		
 						li {
-					// 		color: $color-primary;
+				
 							margin-bottom: 5px;
 						}
 		
-					// 	li span {
-					// 		color: black;
-					// 	}
+				
 					}
-				}
-	
+				}	
 			}		
 		} 
 	} 
-
-
-
 }
 
 
@@ -1174,6 +1126,7 @@ $color-dark-3xl:#292929;
 			.burger-menu-show {
 				transition: 0.5s ease-in-out;
 				transform: rotate(-90deg);
+				color: #F1CDB3;
 			}
 
 			.burger-menu-hide {
@@ -1188,9 +1141,9 @@ $color-dark-3xl:#292929;
 			.menu-show {
 				position: fixed;
 				width: 320px;
-				height: 823px;
+				height: 100vh;
 				background-color: $color-dark-3xl;
-				top: -30px;
+				top: 0;
 				right: 0;
 				animation: burger-show 1s normal;
 				z-index: 4;
@@ -1211,9 +1164,9 @@ $color-dark-3xl:#292929;
 			.menu-hide {
 				position: fixed;
 				width: 320px;
-				height: 823px;
+				height: 100vh;
 				background-color: $color-dark-3xl;
-				top: -30px;
+				top: 0;
 				right: -320px;
 				animation: burger-hide 1s normal;
 				z-index: 4;
@@ -1370,6 +1323,7 @@ $color-dark-3xl:#292929;
 						}
 										
 					}
+					
 			
 					.our-friends-pets {					
 						width: 100%;				
@@ -1526,59 +1480,30 @@ $color-dark-3xl:#292929;
 	}
 
 	.modal {
-		// left: 0;
-		// top: 0;
-		// position: fixed;
-		// z-index: 1000;
-		// background-color: rgba(41, 41, 41, 0.6);
-		// width: 100%;
-		// height: 100%;
-		// overflow: hidden;
+		
 	
 		.modal-content {
-			// top: 50%;
-			// transform: translateY(-50%);
+			
 			width: 240px;
-			// min-height: 350px;
-			// position: relative;
-			// background-color: $color-light-s;
-			// margin-left: auto;
-			// margin-right: auto;
+			
 			border-radius: 8px;
 	
 			.btn-close {
-			// 	position: absolute;
-			// 	top: -52px;s
+		
 				right: -30px;
-			// 	width: 52px;
-			// 	height: 52px;
-			// 	border: 2px solid $color-primary;
-			// 	border-radius: 100%;
-			// 	background: none;
-			// 	outline: none;
+		
 				
 			}
 	
-			// .btn-close:hover {
-			// 	cursor: pointer;
-			// 	background-color: $color-primary-light;
-			// 	border-color: $color-primary-light;
-			// }
+		
 	
 			.modal-card {
 				display: flex;
-				// height: 350px;
+				
 	
 				.modal-image {
 					display: none
-					// width: 350px;
-					// height: 350px;
-					// border-radius: 8px;
-					// overflow: hidden;
-					
-					// img {
-					// 	width: 100%;
-					// }
+				
 				}
 		
 		
@@ -1588,39 +1513,34 @@ $color-dark-3xl:#292929;
 					padding-top: 10px;
 					padding-bottom: 10px;
 					margin-left: 0;
-					// font-family: Georgia;
+				
 					width: 100%;
 		
 					.modal-name {
 						text-align: center;
-					// 	font-size: 35px;
-					// 	line-height: 130%;
+				
 					}
 		
 					.modal-type {
 						text-align: center;
-					// 	font-size: 20px;
-					// 	line-height: 115%;
-					// 	margin-top: 10px;
+				
 					}
 		
 					.modal-description {
-					// 	font-size: 15px;
-					// 	line-height: 110%;
+			
 						margin-top: 20px;
 						text-align: justify;
 						letter-spacing: 0.7px;
-					// 	font-weight: 300;
+				
 					}
 		
 					.modal-list {
-					// 	font-size: 15px;
-					// 	line-height: 110%;
+					
 						margin-top: 24px;
-					// 	list-style-position: inside;
+				
 		
 						li {
-					// 		color: $color-primary;
+			
 							margin-bottom: 5px;
 						}
 
@@ -1628,12 +1548,9 @@ $color-dark-3xl:#292929;
 							margin-bottom: 0;
 						}
 		
-					// 	li span {
-					// 		color: black;
-					// 	}
+				
 					}
 				}
-	
 			}		
 		} 
 	} 
